--- a/requirements.txt
+++ b/requirements.txt
@@ -100,8 +100,8 @@ terminado==0.13.3
 thinc==8.0.15
 threadpoolctl==3.1.0
 tinycss2==1.1.1
-torch==1.11.0
-torchvision==0.12.0
+torch==1.11.0+cpu
+torchvision==0.12.0+cpu
 tornado==6.1
 tqdm==4.64.0
 traitlets==5.1.1
